WIP meta test passes